<resources>
    <string name="question">Question</string>
    <string name="home_title">Home</string>
    <string name="generate_question">Generate question</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="easy_difficulty">Easy</string>
    <string name="medium_difficulty">Medium</string>
    <string name="hard_difficulty">Hard</string>
    <string name="close_btn">close</string>
</resources>